styles/select.module.sass
@import "./_colors"

.select
    background: $bg
    min-height: 100vh
    width: 100%
    display: flex
    justify-content: center
    padding: 2rem 0
    img
        width: 100%
    section
        box-shadow: 5px 4px 25px 20px rgba(0, 0, 0, 0.07)
        background: white
        flex-direction: column
        min-height: 300px
        max-width: 500px
        width: 90%
        padding: 1rem
        h1, p
            font-size: clamp(1.2rem, 2vw, 1.2rem)
            text-align: center
            margin-bottom: 1rem
        p
            font-size: clamp(1.1rem, 2vw, 1.2rem)
            color: $primary
            font-weight: 550
        h2
            padding: 1rem 0
            font-size: clamp(1rem, 2vw, 1rem)

        .dp
            height: 70px
            border-radius: 50%
            text-align: center
            margin-bottom: 1rem
            img
                height: 100%
                width: 100%
                object-fit: cover

        .card
            display: flex
            align-items: center
            margin-bottom: .7rem
            padding: .5rem
            cursor: pointer
            font-size: .9rem
            .logo
                width: 40px
                margin-right: 1rem
            .name
                margin-right: 1rem
                flex-grow: 5
            .details
                justify-self: flex-end
                flex-grow: 1

